@@ -1,3 +1,13 @@
+2009-01-30  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* CSharpBinding.mdp:
+	* Autotools/Makefile.am:
+	* Gui/CSharpAmbience.cs:
+	* Parser/NRefactoryParser.cs:
+	* Parser/FindMemberAstVisitor.cs:
+	* Gui/CSharpTextEditorCompletion.cs: Add support for constraints in
+	generic methods.
+
 2009-01-30  Mike Krüger  <mkrueger@novell.com>
 
 	* Gui/CSharpTextEditorIndentation.cs: Added virtual spaces based on
